[gd_scene load_steps=11 format=3 uid="uid://c1x6q4y2l8k1"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/TurnManager.gd" id="2_tm"]
[ext_resource type="Script" path="res://scripts/Mothership.gd" id="3_ms"]
[ext_resource type="Script" path="res://scripts/ScanManager.gd" id="4_sm"]
[ext_resource type="Script" path="res://scripts/PrinterManager.gd" id="5_pm"]
[ext_resource type="Script" path="res://scripts/CombatManager.gd" id="6_cm"]
[ext_resource type="Script" path="res://scripts/GalaxyMap.gd" id="7_gm"]
[ext_resource type="Script" path="res://scripts/MiningManager.gd" id="8_mm"]
[ext_resource type="Script" path="res://scripts/ScoutManager.gd" id="9_sm"]

[sub_resource type="Environment" id="Environment_glow"]
background_mode = 3
glow_enabled = true
glow_intensity = 0.5
glow_strength = 0.8
glow_bloom = 0.2
glow_blend_mode = 1

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_glow")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0784314, 1)

[node name="Managers" type="Node" parent="."]

[node name="TurnManager" type="Node" parent="Managers"]
script = ExtResource("2_tm")

[node name="Mothership" type="Node" parent="Managers"]
script = ExtResource("3_ms")

[node name="ScanManager" type="Node" parent="Managers"]
script = ExtResource("4_sm")

[node name="PrinterManager" type="Node" parent="Managers"]
script = ExtResource("5_pm")

[node name="MiningManager" type="Node" parent="Managers"]
script = ExtResource("8_mm")

[node name="ScoutManager" type="Node" parent="Managers"]
script = ExtResource("9_sm")

[node name="CombatManager" type="Node" parent="Managers"]
script = ExtResource("6_cm")

[node name="GalaxyMap" type="Node2D" parent="."]
script = ExtResource("7_gm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResourceBar" type="HBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 40
alignment = 1

[node name="EnergyLabel" type="Label" parent="UI/Control/ResourceBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Energy: 100"

[node name="OreLabel" type="Label" parent="UI/Control/ResourceBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "Ore: 50"

[node name="DataLabel" type="Label" parent="UI/Control/ResourceBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Data: 0"

[node name="HPLabel" type="Label" parent="UI/Control/ResourceBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "HP: 100"

[node name="TurnInfo" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="TurnLabel" type="Label" parent="UI/Control/TurnInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Turn: 1"
horizontal_alignment = 2

[node name="PhaseLabel" type="Label" parent="UI/Control/TurnInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Phase: Planning"
horizontal_alignment = 2

[node name="LevelLabel" type="Label" parent="UI/Control/TurnInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "LVL: 1 (XP: 0/100)"
horizontal_alignment = 2

[node name="EndTurnButton" type="Button" parent="UI/Control/TurnInfo"]
layout_mode = 2
text = "End Planning"

[node name="ActionButtons" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 170.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="JumpButton" type="Button" parent="UI/Control/ActionButtons"]
layout_mode = 2
text = "Jump to Selected"

[node name="ScanButton" type="Button" parent="UI/Control/ActionButtons"]
layout_mode = 2
text = "Scan System"

[node name="LaunchScoutButton" type="Button" parent="UI/Control/ActionButtons"]
layout_mode = 2
text = "Launch Scout"

[node name="AssignMinerButton" type="Button" parent="UI/Control/ActionButtons"]
layout_mode = 2
text = "Deploy Miner"

[node name="CombatLog" type="Label" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.4, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "COMBAT ALERT!"
horizontal_alignment = 1

[node name="InfoPanel" type="PanelContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -140.0
offset_right = 250.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/Control/InfoPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Hover over a unit to see details..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PrinterStatus" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 5

[node name="Header" type="Label" parent="UI/Control/PrinterStatus"]
layout_mode = 2
text = "Printers"
horizontal_alignment = 1

[node name="Slot0" type="ProgressBar" parent="UI/Control/PrinterStatus"]
layout_mode = 2
size_flags_vertical = 4

[node name="Slot1" type="ProgressBar" parent="UI/Control/PrinterStatus"]
layout_mode = 2
size_flags_vertical = 4

[node name="Slot2" type="ProgressBar" parent="UI/Control/PrinterStatus"]
layout_mode = 2
size_flags_vertical = 4

[node name="Fabricator" type="HBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 10

[node name="PrintScout" type="Button" parent="UI/Control/Fabricator"]
layout_mode = 2
text = "Scout"

[node name="PrintMiner" type="Button" parent="UI/Control/Fabricator"]
layout_mode = 2
text = "Miner"

[node name="PrintDefender" type="Button" parent="UI/Control/Fabricator"]
layout_mode = 2
text = "Defender"

[node name="GameOverLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="CenterContainer" type="CenterContainer" parent="GameOverLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="GameOverLayer/CenterContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="GameOverLayer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="GameOverLayer/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "MISSION FEHLGESCHLAGEN"
horizontal_alignment = 1

[node name="Reason" type="Label" parent="GameOverLayer/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
text = "Das Mutterschiff wurde zerst√∂rt."
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverLayer/CenterContainer/PanelContainer/VBox"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "NEUSTART"

[connection signal="pressed" from="GameOverLayer/CenterContainer/PanelContainer/VBox/RestartButton" to="." method="_on_restart_pressed"]
